# io_tools

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  io_tools-config.cmake.in
include/io_tools/: array_2d.hpp  c_array.hpp  expect.hpp  input_wrapper.hpp  io_c_array.hpp  io_std_array.hpp  io_std_vector.hpp  is_next.hpp  isubstream.hpp  make_string.hpp  mask_non_print.hpp  range_to_string.hpp  std_array_io.hpp  std_vector_io.hpp  substreambuf.hpp  time_to_dir_string.hpp  time_to_string.hpp
script/: test.sh
test/: CMakeLists.txt  expect.cpp  extract_if_is.cpp  io_std_array.cpp  io_std_vector.cpp  is_next.cpp
test-package/: CMakeLists.txt  test.cpp
test/cpp11/: CMakeLists.txt  expect.cpp  io_c_array.cpp  mask_non_print.cpp  time_to_dir_string.cpp  time_to_string.cpp  time_zone_offset.hpp
test/cpp14/: CMakeLists.txt
test/cpp17/: CMakeLists.txt  make_string.cpp  range_to_string.cpp
